syntax = "proto3";

package buygittinsindex;

// Protocol for service "buy Gittins Index"
// at DanishLightning.dk
// placed on 176.21.113.33:14203

service BuyGittinsIndex {

	// When data has been entered and the button
	// "BUY" has been pressed
	// see example: send_order.js

	rpc OrderGittinsIndex(Order) returns (Bill) {}

	// When the bill has been received,
	// the javaxcript checks every second
	// whether the bill has been paid
	// see example: check_order.js

	// first no checking of paid bill is executed
	// The bill is considered paid, iff number of successes
	// differs from zero.

	rpc CheckPayment(R_HASH) returns (Result) {}

	// an infinite stream with the Gittins indices of the paid bills
	// pass to the customer (remove from list of open connections) and
	// close connection to customer

	rpc AwaitPayment(R_HASH) returns (GittinsIndex) {}
}

message Order {
  int32 discount = 1;
  int32 successes = 2;
  int32 failures = 3;
}

message Bill {
  string billText = 1;
  string r_hash = 2; 
}

message R_HASH {
  string r_hash = 1;
}

message Result {
  bool paid = 1;
  int32 gittins_index = 2;
}

message GittinsIndex {
  int32 gittins_index = 1;
}
